--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,33 +12,8 @@ title: Stanislas Wiart | Art Direction & Digital Design
     	   data-rotate='[ "Digital Design", "Branding", "Web Development", "UI/UX Design" ]'></span>
       </h1>
     </div>
-<!--     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="../images/display-landing-v2-7.jpg" alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="../images/display-landing-v2-10.jpg" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="../images/display-landing-v2-15.jpg" alt="Third slide">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div> -->
-  <div class="main-carousel">
+
+<!--   <div class="main-carousel">
     <div class="carousel-cell">
       <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
         <img src="../images/display-landing-v2-7.jpg" alt="">
@@ -54,7 +29,7 @@ title: Stanislas Wiart | Art Direction & Digital Design
         <img src="../images/display-landing-v2-15.jpg" alt="">
       </div>        
     </div>
-  </div>
+  </div> -->
 
     <div class="" data-aos="fade" data-aos-easing="ease-in-sine" data-aos-duration="600">
       <img src="../images/display-landing-v2-7.jpg" alt="">
