--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -62,11 +62,11 @@ img {
     color: black;
   }
 }
-// img:hover {
-//   transition: all 0.5s ease;
-//   filter: brightness(0.95);
-//   cursor: pointer;
-// }
+img:hover {
+  transition: all 0.5s ease;
+  filter: brightness(0.85);
+  cursor: pointer;
+}
 
 // #cred:hover {
 //   color: rgba(0,0,0,0.7);
